[package]
name = "data-feeder"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "Production-ready Binance data feeder for TimescaleDB"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# PostgreSQL async client
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.12", features = ["serde", "rt_tokio_1"] }
deadpool = { version = "0.10", features = ["rt_tokio_1"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment configuration
dotenvy = "0.15"

# Numerical computation
ndarray = { version = "0.15", features = ["serde"] }

# HTTP server for health checks
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Utilities
parking_lot = "0.12"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = { version = "1.33", features = ["db-tokio-postgres"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
