[package]
name = "ml-layer-1-inference"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "Real-time ML inference for Bitcoin price prediction"
license = "MIT"
readme = "README.md"

[lib]
name = "ml_layer_1_inference"
path = "src/lib.rs"

[[bin]]
name = "ml-inference"
path = "src/main.rs"

[dependencies]
# PyTorch (TorchScript) - CUDA support
tch = { version = "0.14", optional = true }

# ONNX Runtime - stable version 1.14 (last stable, 1.16 yanked)
ort = { version = "1.14", optional = true }

# Pin transitive dependencies to avoid edition2024 issues
base64ct = "1.6"
base64 = "0.21"
http = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.12", features = ["serde", "rt_tokio_1"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Numerical computation
ndarray = { version = "0.15", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment
dotenvy = "0.15"

# Decimal for database
rust_decimal = { version = "1.33", features = ["db-tokio-postgres"] }

[features]
default = []
ml-inference = ["tch", "ort"]

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
